--- a/index.html
+++ b/index.html
@@ -48,11 +48,20 @@
                 <p class="lead text-center" style="color: #daf2e9;">Click on a project for more details.</p>
                 <!-- Portfolio Grid Items-->
                 <div class="row justify-content-center">
+                    <!-- Portfolio Item 12-->
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <a href="project12.html">
+                            <div class="portfolio-item mx-auto">
+                                <img class="img-fluid" src="assets/gifs/vre.gif" alt="..." />
+                            </div>
+                            <p class="h4 text-center mt-2">Custom Render Engine (Vulkan/C++)</p>
+                        </a>
+                    </div>
                     <!-- Portfolio Item 11-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <a href="project11.html">
                             <div class="portfolio-item mx-auto">
-                                <img class="img-fluid" src="assets/img/tank.png" alt="..." />
+                                <img class="img-fluid" src="assets/gifs/bc.gif" alt="..." />
                             </div>
                             <p class="h4 text-center mt-2">Battle City Remake with Custom Engine (C++/SFML)</p>
                         </a>
@@ -163,9 +172,9 @@
                 </div>
                 <p class="h4 text-secondary" style="text-align:left">About Me</p>
                 <p class="lead text-secondary" style="text-align:left">Hello! I am Aybike. A programmer based in London, UK. I am an enthusiastic software developer keen on learning, unlearning and relearning. A good team player who enjoys challenges and an analytical thinker with good problem-solving skills.</p>
-                <p class="lead text-secondary" style="text-align:left">I studied computer engineering for my undergraduate and I am currently nearing the end of a master's degree in computer games technology at City, University of London. I have experience with game engines and commonly used game development APIs.</p>
+                <p class="lead text-secondary" style="text-align:left">I studied computer engineering for my undergraduate and I recently completed a master's degree in games programming at City, University of London. I have experience with game engines and commonly used game development APIs.</p>
                 <p class="lead text-secondary" style="text-align:left">I previously worked as a software engineer using C++ and Qt on development of a maritime simulator.</p>
-                <p class="lead text-secondary" style="text-align:left">As a hobby, I enjoy participating in game jams. So far, I have completed and published games for 8 game jams, often collaborating with other developers. These projects allowed me to meet and work with people from different countries and disciplines, honing my soft skills as well as my technical skills.</p>
+                <p class="lead text-secondary" style="text-align:left">As a hobby, I enjoy participating in game jams. So far, I have completed and published games for 9 game jams, often collaborating with other developers. These projects allowed me to meet and work with people from different countries and disciplines, honing my soft skills as well as my technical skills.</p>
             </div>
         </header>
         <!-- Footer-->
@@ -182,9 +191,10 @@
                     <!-- Footer Social Icons-->
                     <div class="col-lg-6 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4" style="color: #95e0cc;">Links</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://euruss.itch.io/" target="_blank"><i class="fab fa-fw fa-itch-io"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/akilic9" target="_blank"><i class="fab fa-fw fa-github"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/akilic/" target="_blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://euruss.itch.io/" target="_blank"><i class="fab fa-fw fa-itch-io"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.youtube.com/@aybikekilic9" target="_blank"><i class="fab fa-fw fa-youtube"></i></a>
                     </div>
                 </div>
             </div>
