--- a/project1.html
+++ b/project1.html
@@ -68,7 +68,7 @@
                         <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Programmer</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Project Type</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Game Jam - Team</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Link</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Link(s)</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;"><a href="https://tudypie.itch.io/shallow-worlds" target="_blank">Play here!</a></p></div>
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Engine</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Unity</p></div>
@@ -111,9 +111,10 @@
                     <!-- Footer Social Icons-->
                     <div class="col-lg-6 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4" style="color: #95e0cc;">Links</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://euruss.itch.io/" target="_blank"><i class="fab fa-fw fa-itch-io"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/akilic9" target="_blank"><i class="fab fa-fw fa-github"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/akilic/" target="_blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://euruss.itch.io/" target="_blank"><i class="fab fa-fw fa-itch-io"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.youtube.com/@aybikekilic9" target="_blank"><i class="fab fa-fw fa-youtube"></i></a>
                     </div>
                 </div>
             </div>
