--- a/project10.html
+++ b/project10.html
@@ -69,8 +69,9 @@
                         <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">All</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Project Type</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Solo - Coursework</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Link</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Soon!</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Link(s)</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Executable coming soon.</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Code available for private access.</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Engine</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Custom OpenGL</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Language</p></div>
@@ -106,9 +107,10 @@
                     <!-- Footer Social Icons-->
                     <div class="col-lg-6 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4" style="color: #95e0cc;">Links</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://euruss.itch.io/" target="_blank"><i class="fab fa-fw fa-itch-io"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/akilic9" target="_blank"><i class="fab fa-fw fa-github"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/akilic/" target="_blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://euruss.itch.io/" target="_blank"><i class="fab fa-fw fa-itch-io"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.youtube.com/@aybikekilic9" target="_blank"><i class="fab fa-fw fa-youtube"></i></a>
                     </div>
                 </div>
             </div>
