--- a/project12.html
+++ b/project12.html
@@ -40,59 +40,61 @@
                 <div class="row text-secondary justify-content-center">
                     <div class="col-lg-10">
                         <!-- Masthead Heading-->
-                        <h1 class="page-section-heading text-secondary pt-6 mb-0">Capture the Planets</h1>
+                        <h1 class="page-section-heading text-secondary pt-6 mb-0">Custom Render Engine (Vulkan/C++)</h1>
                         <!-- Divider-->
                         <div class="divider-custom mb-2" style="justify-content:left;">
-                            <div class="divider-custom-line2" style="max-width:35rem;"></div>
+                            <div class="divider-custom-line2" style="max-width:67rem;"></div>
                         </div>
                         <!-- Masthead Subheading-->
-                        <p class="lead text-secondary mb-4">As a mentee under Ubisoft's Develop at Ubisoft programming mentorship program, I created a 2D game named Capture the Planets from scratch using the provided C++ API, under guidance of an expert programmer at Ubisoft.</p>
-                        <p class="lead text-secondary mb-4">I am currently working on an update for this game and will be uploading the executable for it in the near future!</p>
+                        <p class="lead text-secondary mb-4">A basic Vulkan render engine project created as part of my graduation project. Throughout this project I took a deep dive into computer graphics and engine programming using C++ and Vulkan graphics API.</p>
                     </div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-lg-7">
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">My work</p></div>
                         <ul>
-                            <li><p class="h5" style="font-weight:500;">Got familiar with the provided API and built my game on it.</p></li>
-                            <li><p class="h5" style="font-weight:500;">Used finite state machines for planets' capturing mechanic and enemy AI's behaviour.</p></li>
-                            <li><p class="h5" style="font-weight:500;">Used object-pooling for shooting.</p></li>
-                            <li><p class="h5" style="font-weight:500;">Implemented object-component systems, collision detection and handling.</p></li>
-                            <li><p class="h5" style="font-weight:500;">Experimented with AI pathfinding algorithms and entity component systems.</p></li>
-                        </ul>                        
+                            <li><p class="h5" style="font-weight:500;">Implemented the fundamental pipelines for rendering with Vulkan.</p></li>
+                            <li><p class="h5" style="font-weight:500;">Implemented a 3D space camera.</p></li>
+                            <li><p class="h5" style="font-weight:500;">Implemented a GLTF model loader with textures.</p></li>
+                            <li><p class="h5" style="font-weight:500;">Implemented a lighting system using point lights with the Blinn-Phong lighting model.</p></li>
+                        </ul>                 
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Outcomes</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">I had a great experience learning from my mentor.</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">I learned how to write organized and structured code.</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">I learned about scope and time management, working incrementally, making fast and simple prototypes.</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">I created a game that I love from scratch using C++ and presented it to a group of developers and other mentees at Ubisoft Leamington.</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">I started from scratch using the Vulkan API, learning what is under the hood of graphics systems and trying to exercise the best practices in order to keep the code clean, efficient and organized as the project grew.</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">During the project, I found out that there aren't a lot of resources for learning Vulkan, but this became less of a problem as throughout the project I got better at reading and working with sample codes/other publicly available projects.</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">This was a fun, challenging and rewarding project all at once. It certainly wasn't without some frustrating moments but it taught me so much about engine and graphics programming as well as granting me my MSc degree.</p></div>
                     </div>
                     <div class="col-lg-3 text-end">
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Date</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Oct 2023 - Jan 2024</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Jul 2024 - Oct 2024</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Role</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">All</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Project Type</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Solo - Mentorship</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Link</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Executable coming soon.</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Code unavailable due to NDA.</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Solo - Dissertation</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Link(s)</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;"><a href="https://github.com/akilic9/restir-vulkan" target="_blank">GitHub Repo</a></p></div>
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Engine</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Custom API</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Language</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">C++</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Custom self-made</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Language/API</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">C++/Vulkan</p></div>
                     </div>
                 </div>
                 <div class="row justify-content-center mt-5">
-                    <iframe width="1024" height="768"
-                        src="https://www.youtube.com/embed/Mf7QNJf8AF8">
-                    </iframe>
+                    <div class="col-md-6 col-lg-6 mb-5">
+                        <img class="img-fluid" src="assets/img/vre/vre0.jpg" alt="..." />
+                    </div>
+                    <div class="col-md-6 col-lg-6 mb-5">
+                        <img class="img-fluid" src="assets/img/vre/vre1.jpg" alt="..." />
+                    </div>
+                    <div class="col-md-6 col-lg-6 mb-5">
+                        <img class="img-fluid" src="assets/img/vre/vre2.jpg" alt="..." />
+                    </div>
+                    <div class="col-md-6 col-lg-6 mb-5">
+                        <img class="img-fluid" src="assets/img/vre/vre3.jpg" alt="..." />
+                    </div>
                 </div>
                 <div class="row mt-5 text-center">
-                    <div class="col-lg-6">
-                        <a class="btn btn-dark mx-1" href="project10.html"><p class="h4 mb-0" style="font-weight: 550;"><i class="fas fa-fw fa-circle-left me-2"></i>Previous Project</p></a>
-                    </div>
-                    <div class="col-lg-6">
-                        <a class="btn btn-dark mx-1" href="project8.html"><p class="h4 mb-0" style="font-weight: 550;">Next Project<i class="fas fa-fw fa-circle-right ms-2"></i></p></a>
+                    <div class="col-lg-12">
+                        <a class="btn btn-dark mx-1" href="project11.html"><p class="h4 mb-0" style="font-weight: 550;">Next Project<i class="fas fa-fw fa-circle-right ms-2"></i></p></a>
                     </div>
                 </div>
             </div>
