--- a/project11.html
+++ b/project11.html
@@ -64,12 +64,12 @@
                     </div>
                     <div class="col-lg-3 text-end">
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Date</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Feb 2024 - Ongoing</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Feb 2024 - May 2024</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Role</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">All</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Project Type</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Solo</p></div>
-                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Link</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Solo - Coursework</p></div>
+                        <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Link(s)</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;"><a href="https://github.com/akilic9/cga-project" target="_blank">GitHub Repo</a></p></div>
                         <div class="row-cols-auto mb-auto"><p class="h4" style="color:#f14e52;">Engine</p></div>
                         <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">Custom self-made</p></div>
@@ -77,8 +77,22 @@
                         <div class="row-cols-auto mb-auto"><p class="h5" style="font-weight:500;">C++</p></div>
                     </div>
                 </div>
+                <div class="row justify-content-center mt-5">
+                    <div class="col-md-6 col-lg-6 mb-5">
+                        <img class="img-fluid" src="assets/img/bc/bc0.jpg" alt="..." />
+                    </div>
+                    <div class="col-md-6 col-lg-6 mb-5">
+                        <img class="img-fluid" src="assets/img/bc/bc1.jpg" alt="..." />
+                    </div>
+                    <div class="col-md-6 col-lg-6 mb-5">
+                        <img class="img-fluid" src="assets/img/bc/bc2.jpg" alt="..." />
+                    </div>
+                </div>
                 <div class="row mt-5 text-center">
-                    <div class="col-lg-12">
+                    <div class="col-lg-6">
+                        <a class="btn btn-dark mx-1" href="project12.html"><p class="h4 mb-0" style="font-weight: 550;"><i class="fas fa-fw fa-circle-left me-2"></i>Previous Project</p></a>
+                    </div>
+                    <div class="col-lg-6">
                         <a class="btn btn-dark mx-1" href="project10.html"><p class="h4 mb-0" style="font-weight: 550;">Next Project<i class="fas fa-fw fa-circle-right ms-2"></i></p></a>
                     </div>
                 </div>
@@ -98,9 +112,10 @@
                     <!-- Footer Social Icons-->
                     <div class="col-lg-6 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4" style="color: #95e0cc;">Links</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://euruss.itch.io/" target="_blank"><i class="fab fa-fw fa-itch-io"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/akilic9" target="_blank"><i class="fab fa-fw fa-github"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/akilic/" target="_blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://euruss.itch.io/" target="_blank"><i class="fab fa-fw fa-itch-io"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.youtube.com/@aybikekilic9" target="_blank"><i class="fab fa-fw fa-youtube"></i></a>
                     </div>
                 </div>
             </div>
