--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <div class="portfolio-item mx-auto">
                                 <img class="img-fluid" src="assets/gifs/vre.gif" alt="..." />
                             </div>
-                            <p class="h4 text-center mt-2">Custom Render Engine (Vulkan/C++)</p>
+                            <p class="h4 text-center mt-2">Custom Render Engine (C++/Vulkan)</p>
                         </a>
                     </div>
                     <!-- Portfolio Item 11-->
@@ -63,7 +63,7 @@
                             <div class="portfolio-item mx-auto">
                                 <img class="img-fluid" src="assets/gifs/bc.gif" alt="..." />
                             </div>
-                            <p class="h4 text-center mt-2">Battle City Remake with Custom Engine (C++/SFML)</p>
+                            <p class="h4 text-center mt-2">Battle City Remake with Custom Engine (C++)</p>
                         </a>
                     </div>
                     <!-- Portfolio Item 10-->
