--- a/project12.html
+++ b/project12.html
@@ -40,7 +40,7 @@
                 <div class="row text-secondary justify-content-center">
                     <div class="col-lg-10">
                         <!-- Masthead Heading-->
-                        <h1 class="page-section-heading text-secondary pt-6 mb-0">Custom Render Engine (Vulkan/C++)</h1>
+                        <h1 class="page-section-heading text-secondary pt-6 mb-0">Custom Render Engine (C++/Vulkan)</h1>
                         <!-- Divider-->
                         <div class="divider-custom mb-2" style="justify-content:left;">
                             <div class="divider-custom-line2" style="max-width:67rem;"></div>
