--- a/project11.html
+++ b/project11.html
@@ -40,7 +40,7 @@
                 <div class="row text-secondary justify-content-center">
                     <div class="col-lg-10">
                         <!-- Masthead Heading-->
-                        <h1 class="page-section-heading text-secondary pt-6 mb-0">Battle City Remake with Custom Engine (C++/SFML)</h1>
+                        <h1 class="page-section-heading text-secondary pt-6 mb-0">Battle City Remake with Custom Engine (C++)</h1>
                         <!-- Divider-->
                         <div class="divider-custom mb-2" style="justify-content:left;">
                             <div class="divider-custom-line2" style="max-width:67rem;"></div>
