--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                 <div class="divider-custom">
                     <div class="divider-custom-line1" style="background-color: #95e0cc;"></div>
                 </div>
-                <p class="lead text-center" style="color: #daf2e9;">My projects! (This website is also one ;) )</p>
+                <p class="lead text-center" style="color: #daf2e9;">My projects!</p>
+                <p class="text-center" style="color: #daf2e9;"><i small>**This website is also one ;)</i></p>
                 <p class="lead text-center" style="color: #daf2e9;">Click on a project for more details.</p>
                 <!-- Portfolio Grid Items-->
                 <div class="row justify-content-center">
