--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div class="divider-custom-line1" style="background-color: #95e0cc;"></div>
                 </div>
                 <p class="lead text-center" style="color: #daf2e9;">My projects!</p>
-                <p class="text-center" style="color: #daf2e9;"><i small>**This website is also one ;)</i></p>
+                <p class="text-center" style="color: #daf2e9;"><i small>* This website is also one ;) *</i></p>
                 <p class="lead text-center" style="color: #daf2e9;">Click on a project for more details.</p>
                 <!-- Portfolio Grid Items-->
                 <div class="row justify-content-center">
